# be-rail

./: AUTHORS  CHANGELOG  CMakeLists.txt  README.md  be-rail.desktop
cache/: lijnen.htm  stations.htm
db/: be-rail-fr.sqlite  be-rail-ge.sqlite  be-rail-nl.sqlite  be-rail.sqlite
scripts/: build-db.sh  nl2de_lines.sh  nl2de_stations.sh  nl2en.sh  nl2en_lines.sh  nl2en_stations.sh  nl2fr.sh  nl2fr_lines.sh  nl2fr_stations.sh  nl2ge.sh  web2csv.sh
src/: CMakeLists.txt  be-rail.rc  icons.qrc  main.cpp  mainwindow.cpp  mainwindow.h
translations/: be-rail_de.ts  be-rail_fr.ts  be-rail_nl.ts
